# zequinha_servidor

./: .gitignore  plano de trabalho1.txt  plano de trabalho_resumido.txt  start_servidor_chatgpt.sh
install/: local_setup.sh  setup.sh
install/audio_capture/lib/audio_capture/: audio_capture_node
install/audio_capture/share/audio_capture/: local_setup.sh  package.sh
install/audio_common/share/audio_common/: package.sh
install/audio_common_msgs/share/audio_common_msgs/: local_setup.sh  package.dsv  package.ps1  package.sh
install/pacote5_transcritor/lib/pacote5_transcritor/: transcriber_node
install/pacote5_transcritor/share/pacote5_transcritor/: package.bash  (+4 more)
install/pacote8_publisher_voz/share/pacote8_publisher_voz/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/audio_common/audio_capture/: CMakeLists.txt  package.xml
src/pacote5_transcritor/: package.xml  setup.cfg  setup.py
src/pacote5_transcritor/pacote5_transcritor/: google_transcriber_node.py
src/pacote6_llm_chatgpt/: package.xml  setup.cfg  setup.py
src/pacote6_llm_chatgpt/pacote6_llm_chatgpt/: llm_server_node.py  personalidade_robo.py
src/pacote7_vits/: docker_build_log.txt  package.xml  requirements.txt  setup.cfg  setup.py
src/pacote7_vits/docker/: Dockerfile  Dockerfile.save
src/pacote8_publisher_voz/: setup.cfg  setup.py
src/pacote8_publisher_voz/pacote8_publisher_voz/: speech_synthesis_publisher_node.py
src/robot_bringup/: package.xml  setup.py
src/robot_bringup/launch/: start_robot.launc  start_robot_gemini.launc
(+46 files in other folders)
