<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pacote8_publisher_voz</name>
  <version>0.0.1</version>
  <description>Nó ROS 2 que recebe texto, sintetiza a voz usando um servidor VITS e publica os dados de áudio brutos.</description>
  <maintainer email="saulo@todo.todo">saulo</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>requests</exec_depend>
  <exec_depend>audio_common_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
